# momentum

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  check_fs.sh  create_image.sh  cxxglue.cpp  linux_run.sh  main.c  main.cpp  momentum.code-workspace  run.sh  stack_protector.cpp  x86.ld  x86_64.in  x86_64.ld  x86_64.ld.in
DDI/: block_driver.c  block_driver.cpp  block_driver.h  ddi.c  ddi.cpp  ddi.h  driver.cpp  driver.h  filesystem.cpp  filesystem.h  partition_table.h  pci_driver.c  pci_driver.cpp  pci_driver.h  pci_ids.h
acpica/: 0001-Add-momentum-OS.patch  CMakeLists.txt  acmomentum.h
acpica/include/platform/: acenv.h  acmomentum.h
arch/: mm.h  paging.h  synchronization.h  time.h  video.cpp  video.h
arch/efi/: CMakeLists.txt  cxxglue.cpp  efi.h  efi_momentum.cpp  mm.cpp  mm.h  paging.cpp  paging.h  synchronization.cpp  time.cpp  video.cpp  video.h
arch/x86/: acpi.c  acpi.cpp  acpi.h  apic.c  apic.cpp  apic.h  arch_hal.s  cpu.h  descriptor_tables.c  descriptor_tables.cpp  descriptor_tables.h  global.c  global.cpp  global.h  interrupts.c  interrupts.cpp  interrupts.h  keyboard.c  keyboard.cpp  keyboard.h  loader.s  mm.c  mm.cpp  mm.h  multitask.c  multitask.cpp  multitask.h  paging.c  paging.cpp  paging.h  pci.c  pci.cpp  pci.h  stage1.s  stage1_5.c  stage2.c  stage2.cpp  timer.c  timer.cpp  timer.h  (+2 more)
arch/x86_64/: CMakeLists.txt  acpi.cpp  acpi.h  apic.cpp  apic.h  arch_hal.h  arch_hal.s  bootstrap_functions.c  cpu.h  descriptor_tables.cpp  descriptor_tables.h  font.cpp  font.h  global.cpp  global.h  interrupts.cpp  interrupts.h  keyboard.cpp  keyboard.h  loader.s  loader.s.in  loader_c.c  mm.cpp  mm.h  multiboot.h  multiboot2.cpp  multiboot2.h  multitask.cpp  multitask.h  paging.cpp  paging.h  pci.cpp  pci.h  rtc.cpp  rtc.h  stage2.cpp  timer.cpp  timer.h  trampolin.cpp  trampolin.s  (+2 more)
arch/x86_64/x86/: arch_hal.s  keyboard.cpp  keyboard.h  mm.cpp  multitask.h
cmake/: efi-pc-none-elf_toolchain.cmake  x86_64-pc-momentum-elf_toolchain.cmake  x86_64-pc-none-elf_toolchain.cmake
cmake/Compiler/: NASM-ASM.cmake
cmake/Platform/: EFI.cmake  Momentum.cmake
driver/: CMakeLists.txt  ata.cpp  ata.h  ataio.s  binary_loader.cpp  binary_loader.h  driver.cpp  driver.h  fatgen.cpp  fatgen.h  ramdrive.cpp  ramdrive.h  sata3.0.h
driver/disk/: CMakeLists.txt  ata.cpp  ata.h  ide.cpp  ide.h  sata.cpp  sata.h  sata3.0.h
driver/ext/: CMakeLists.txt  ext.cpp  ext.h  ext_vfs.cpp  ext_vfs.h  ext_vnode.cpp  ext_vnode.h
driver/fatgen/: CMakeLists.txt  fatgen.cpp  fatgen.h
driver/standard_output/: CMakeLists.txt  standard_output.cpp  standard_output.h
driver/usb/: uhci.cpp  uhci.h
efi/: CMakeLists.txt
hosted_libc/: Makefile  crt.c  crt0.c  syscall.s
hosted_libc/tests/: file_tests.c
kernel/: ELFFile.cpp  ELFFile.h  ELFLoader.cpp  ELFLoader.h  acpica_glue.cpp  binary_loader.cpp  binary_loader.h  bitmap.h  bitmap_allocator.cpp  bitmap_allocator.h  config.h  config.h.in  deflate.h  font.cpp  font.h  framebuffer.cpp  framebuffer.h  gui.cpp  gui.h  heap.h  kernel_shell.cpp  kernel_shell.h  lists.c  lists.cpp  lists.h  logging.cpp  logging.h  momentum.h  multitask.cpp  multitask.h  sys_info.cpp  sys_info.h  syscall.h  vfs.c  vfs.cpp  vfs.h  vfsops.cpp  vfsops.h  vnode.cpp  vnode.h
libc/: CMakeLists.txt  crt0.c  crtend.c  ctype.c  ctype.h  dirent.c  dirent.h  endian.h  errno.c  errno.h  fcntl.c  fcntl.h  getopt.c  glob.c  libg_dummy.c  limits.h  mman.c  native_sync.h  netdb.c  pwd.h  resource.c  setjmp.c  setjmp.h  setjmp.s  signal.c  socket.c  stat.c  stddef.h  stdio.c  stdio.cpp  stdio.h  stdlib.c  stdlib.cpp  stdlib.h  string.c  string.cpp  string.h  stubs.c  syscall.s  termio.c  (+11 more)
libc++/: algorithm  algorithm.h  climits  cstddef  cxxglue.cpp  functional  iterator  list  list.h  map  map.h  memory  memory.h  native_sync.h  new  new.cpp  new.h  ring_buffer  shared_ptr.cpp  stdatomic.h  string  string.cpp  string.h  string.hpp  type_traits  utility  uuid.h  vector  vector.cpp  vector.h
libc/include/: ctype.h  dirent.h  endian.h  errno.h  fcntl.h  fnmatch.h  getopt.h  glob.h  grp.h  io.h  limits.h  locale.h  malloc.h  memory.h  mntent.h  native_sync.h  netdb.h  poll.h  pwd.h  setjmp.h  signal.h  stddef.h  stdint.h  stdio.h  stdio_ext.h  stdlib.h  string.h  struct_timeval.h  termio.h  termios.h  threads.h  time.h  unistd.h  utime.h  wchar.h
libc/include/arpa/: inet.h
libc/include/net/: if.h
libc/include/netinet/: in.h
libc/include/sys/: ioctl.h  mman.h  resource.h  select.h  socket.h  stat.h  statfs.h  statvfs.h  syscall.h  time.h  times.h  types.h  un.h  utsname.h  wait.h
libc/sys/: ioctl.h  stat.h  types.h  wait.h
tools/: AppendRamDrive.c  CMakeLists.txt  ImCopy.c  Makefile  build_coreutils.sh  build_hosted_binutils.sh  build_hosted_coreutils.sh  build_hosted_gcc.sh  build_target_busybox.sh  build_target_coreutils.sh  build_target_musl.sh  cleanup.sh  fusepart.c  hello_world.c  hello_world.s  install_target_busybox.sh  ls.c  makefile  sh.c  sh.s
tools/fusepart/: CMakeLists.txt  fusepart.c
tools/host_libc/include/: stdio.h
